[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pw-butler"
dynamic = ["version"]
description = 'A local password management system'
readme = "readme.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Kaijun Feng"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "psycopg",
  "sqlalchemy",
  "cryptography",
  "click",
  "python-on-whales",
  "pyperclip",
  "pandas"
]

[project.urls]
Documentation = "https://github.com/unknown/pw-butler#readme"
Issues = "https://github.com/unknown/pw-butler/issues"
Source = "https://github.com/unknown/pw-butler"

[project.scripts]
butler = "butler.ui:cli"

[tool.hatch.version]
path = "src/butler/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/butler"]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pw_butler tests}"

[tool.coverage.run]
source_pkgs = ["pw_butler", "tests"]
branch = true
parallel = true
omit = [
  "src/butler/__init__.py",
]

[tool.coverage.paths]
pw_butler = ["src/butler", "*/pw-butler/src/butler"]
tests = ["tests", "*/pw-butler/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
